# clinoapi

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: python-app.yml  python-flake.yml
src/: main.py
