[tool.poetry]
name = "clinoapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.7.1"
flakeheaven = "^3.3.0"
pytest = "^8.2.1"
black = "^24.4.2"
spacy = "^3.7.4"
uvicorn = "^0.30.0"
es_core_news_md = {url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.7.0/es_core_news_md-3.7.0.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
